# investor-command-center

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: windows-release.yml
docs/: CSV-Import.md  Codex-ChangeLog.md  Data-Model.md  Privacy-And-Local-Data.md  Product-Brief.md  Release-Notes-Guide.md  Roadmap.md
src/: main.cpp
src/app/: App.cpp  App.hpp  AppState.cpp  AppState.hpp  SIDEBAR_REFACTOR_NOTES.md  SidebarModel.cpp  SidebarModel.hpp
src/db/: Database.cpp  Database.hpp  Migrations.cpp  Migrations.hpp
src/models/: Account.hpp  CapitalGainAllocationRule.hpp  DashboardChartSetting.hpp  DashboardWidget.hpp  DatabaseBackup.hpp  Dividend.hpp  Goal.hpp  Holding.hpp  ImportBatch.hpp  MarketPriceHistory.hpp  MarketQuote.hpp  PortfolioSnapshot.hpp  SignalRules.hpp  StockPickResearchReport.hpp  TechnicalIndicatorSettings.hpp  TechnicalIndicatorSnapshot.hpp  Transaction.hpp  Watchlist.hpp  WatchlistItem.hpp  WatchlistPriceRefresh.hpp
src/net/: HttpClient.cpp  HttpClient.hpp
src/repositories/: AccountRepository.cpp  AccountRepository.hpp  AppSettingsRepository.cpp  AppSettingsRepository.hpp  CapitalGainAllocationRepository.cpp  CapitalGainAllocationRepository.hpp  DashboardChartSettingsRepository.cpp  DashboardChartSettingsRepository.hpp  DashboardLayoutRepository.cpp  DashboardLayoutRepository.hpp  DividendRepository.cpp  DividendRepository.hpp  GoalRepository.cpp  GoalRepository.hpp  HoldingRepository.cpp  HoldingRepository.hpp  ImportBatchRepository.cpp  ImportBatchRepository.hpp  MarketPriceHistoryRepository.cpp  MarketPriceHistoryRepository.hpp  MarketQuoteCacheRepository.cpp  MarketQuoteCacheRepository.hpp  PortfolioSnapshotRepository.cpp  PortfolioSnapshotRepository.hpp  TechnicalIndicatorCacheRepository.cpp  TechnicalIndicatorCacheRepository.hpp  TransactionRepository.cpp  TransactionRepository.hpp  WatchlistRepository.cpp  WatchlistRepository.hpp
src/services/: CapitalGainAllocationService.cpp  CapitalGainAllocationService.hpp  CsvImportService.cpp  CsvImportService.hpp  DashboardLayoutService.cpp  DashboardLayoutService.hpp  DashboardService.cpp  DashboardService.hpp  DatabaseBackupService.cpp  DatabaseBackupService.hpp  HoldingsCsvImport.cpp  HoldingsCsvImport.hpp  MarketDataProvider.cpp  MarketDataProvider.hpp  MarketDataService.cpp  MarketDataService.hpp  PerformanceCalculator.cpp  PerformanceCalculator.hpp  PortfolioCalculator.cpp  PortfolioCalculator.hpp  SignalRulesService.cpp  SignalRulesService.hpp  StockPickReportDocxExporter.cpp  StockPickReportDocxExporter.hpp  StockPickReportExportCommon.cpp  StockPickReportExportCommon.hpp  StockPickReportPdfExporter.cpp  StockPickReportPdfExporter.hpp  StockPickReportService.cpp  StockPickReportService.hpp  TechnicalIndicatorService.cpp  TechnicalIndicatorService.hpp  TechnicalIndicatorSettingsService.cpp  TechnicalIndicatorSettingsService.hpp  TransactionService.cpp  TransactionService.hpp  WatchlistIndicatorDisplay.cpp  WatchlistIndicatorDisplay.hpp  WatchlistSignalService.cpp  WatchlistSignalService.hpp  (+2 more)
src/ui/: AccountsView.cpp  AccountsView.hpp  DashboardView.cpp  DashboardView.hpp  DividendsView.cpp  DividendsView.hpp  GoalsView.cpp  GoalsView.hpp  HoldingsView.cpp  HoldingsView.hpp  ImportCsvView.cpp  ImportCsvView.hpp  ReportsView.cpp  ReportsView.hpp  SettingsView.cpp  SettingsView.hpp  StockResearchView.cpp  StockResearchView.hpp  TransactionsView.cpp  TransactionsView.hpp  UiTheme.cpp  UiTheme.hpp  WatchlistView.cpp  WatchlistView.hpp
src/ui/widgets/: DatePicker.cpp  DatePicker.hpp  TerminalPanel.cpp  TerminalPanel.hpp
src/util/: Date.cpp  Date.hpp  Money.cpp  Money.hpp
tests/: SidebarModelTests.cpp  StockPickReportServiceTests.cpp  WatchlistIndicatorDisplayTests.cpp
